--- a/CoffeeBeanColours.html
+++ b/CoffeeBeanColours.html
@@ -16,9 +16,9 @@
         <div id="SelectImage" style="width:622px;">
             <table style="width:100%">
                 <tr>
-                    <td width="15%"><em>Load image:</em></td>
-                    <td width="61%"><input style="float:left;" id="uploadImage" type="file" name="myPhoto" onchange="loadImageFile();" /></td>
-                    <td width="24%" align="center">
+                    <td><em>Load image:</em></td>
+                    <td><input style="float:left;" id="uploadImage" type="file" name="myPhoto" onchange="loadImageFile();" /></td>
+                    <td align="center">
                         <div id="pointerMode"></div>
                     </td> 
                 </tr>
@@ -33,8 +33,8 @@
         <div id="tblButtons" style="width:622px;">
              <table style="width:100%">
                  <tr>
-                     <td width="80%"><em>Coffee Bean Roast Colour:</em></td>
-                     <td width="20%" align="left">
+                     <td><em>Coffee Bean Roast Colour:</em></td>
+                     <td align="left">
                          <button title="New comment" style="background-color:white" onClick="clearUserComments()"><img src="./img/new_note_button.png"/></button>
                          <button title="Copy comment to clipboard" style="background-color:white" onClick="copyComments()"><img src="./img/copy_note_button.png"/></button>
                      </td>
