--- a/CoffeeBeanColours.html
+++ b/CoffeeBeanColours.html
@@ -18,7 +18,7 @@
                 <tr>
                     <td><em>Load image:</em></td>
                     <td><input style="float:left;" id="uploadImage" type="file" name="myPhoto" onchange="loadImageFile();" /></td>
-                    <td align="center">
+                    <td>
                         <div id="pointerMode"></div>
                     </td> 
                 </tr>
@@ -34,14 +34,14 @@
              <table style="width:100%">
                  <tr>
                      <td><em>Coffee Bean Roast Colour:</em></td>
-                     <td align="left">
+                     <td>
                          <button title="New comment" style="background-color:white" onClick="clearUserComments()"><img src="./img/new_note_button.png"/></button>
                          <button title="Copy comment to clipboard" style="background-color:white" onClick="copyComments()"><img src="./img/copy_note_button.png"/></button>
                      </td>
                  </tr>
              </table>
          </div>
-         <div id="Comments" style="width:622px;" align="center">
+         <div id="Comments" style="width:622px;">
              <textarea id="userComments" rows="6" cols="75"></textarea>
          </div>
          <div id="dvResultsTable" style="width:622px;">
