Added basic alt text for both images
in CoffeeBeanColours

--- a/CoffeeBeanColours.html
+++ b/CoffeeBeanColours.html
@@ -35,8 +35,8 @@
                  <tr>
                      <td><em>Coffee Bean Roast Colour:</em></td>
                      <td>
-                         <button title="New comment" style="background-color:white" onClick="clearUserComments()"><img src="./img/new_note_button.png"/></button>
-                         <button title="Copy comment to clipboard" style="background-color:white" onClick="copyComments()"><img src="./img/copy_note_button.png"/></button>
+                         <button title="New comment" style="background-color:white" onClick="clearUserComments()"><img src="./img/new_note_button.png" alt="New Comment"/></button>
+                         <button title="Copy comment to clipboard" style="background-color:white" onClick="copyComments()"><img src="./img/copy_note_button.png" alt="Copy Comment"/></button>
                      </td>
                  </tr>
              </table>
